day-two/api/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80 # entry service port
      targetPort: 8080 # entry pod port
