day-two/api/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: api.lilian-andres.cpe.takima.school
      http:
        paths:
          - backend:
              service:
                name: api-service # link with service is made by its name
                port:
                  number: 80 # entry service port
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - api.lilian-andres.cpe.takima.school
      secretName: app-wildcard
